fixed alignment of buttons

--- a/styles/CustomNavbar.module.css
+++ b/styles/CustomNavbar.module.css
@@ -29,7 +29,7 @@
 }
 
 .verifiedSessionButtons {
-   margin-right: auto !important;
+   margin-right: 95rem !important;
    flex-grow: 1;
    display: flex;
    flex-direction: row;
